--- a/index.html
+++ b/index.html
@@ -15,9 +15,10 @@
             </ol>
         <img src=".\resources\images\StockPhoto1.jfif" class="photo1">
         <h3>Resources</h3>
-            <ul>
+            <ul><div class="Links">
                 <li><a href="https://www.codecademy.com/">Codecademy</a></li>
                 <li><a href="https://www.galvanize.com/">Galvanize</a></li>
+            </div>
             </ul>
     </body>
     <footer>
