--- a/index.html
+++ b/index.html
@@ -15,11 +15,10 @@
             </ol>
         <img src=".\resources\images\StockPhoto1.jfif" class="photo1">
         <h3>Resources</h3>
-            <ul><div class="Links">
-                <li><a href="https://www.codecademy.com/">Codecademy</a></li>
-                <li><a href="https://www.galvanize.com/">Galvanize</a></li>
+            <div class="Links">
+                <a href="https://www.codecademy.com/">Codecademy</a>
+                <a href="https://www.galvanize.com/">Galvanize</a>
             </div>
-            </ul>
     </body>
     <footer>
         <p><bold>Thank you for visiting.</bold></p>
