--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
             </ol>
         <img src=".\resources\images\StockPhoto1.jfif" class="photo1">
         <h3>Resources</h3>
-            <div class="Links">
-                <a href="https://www.codecademy.com/">Codecademy</a>
-                <a href="https://www.galvanize.com/">Galvanize</a>
+            <div class="Resources">
+                <a href="https://www.codecademy.com/" class="Links">Codecademy</a>
+                <a href="https://www.galvanize.com/" class="Links">Galvanize</a>
             </div>
     </body>
     <footer>
