--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             </ol>
         <img src=".\resources\images\StockPhoto1.jfif" class="photo1">
         <h3>Resources</h3>
-            <div class="Resources">
+            <div class="container">
                 <a href="https://www.codecademy.com/" class="Links">Codecademy</a>
                 <a href="https://www.galvanize.com/" class="Links">Galvanize</a>
             </div>
