--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
             <div class="container">
                 <a href="https://www.codecademy.com/" class="Links">Codecademy</a>
                 <a href="https://www.galvanize.com/" class="Links">Galvanize</a>
+                <a href="https://www.w3schools.com/html/html_css.asp" class="Links">W3Schools</a>
             </div>
     </body>
     <footer>
