--- a/index.html
+++ b/index.html
@@ -1,25 +1,37 @@
+<!-- FILEPATH: /c:/Software Projects/DevProject/Webpage 1.html -->
+<!DOCTYPE html>
 <html>
-<head>
-    <link href="./resources/css/style.css" type="text/css" rel="stylesheet">
-    <title>The Learning Platform</title>
-</head>
+    <head>
+        <link href="./resources/css/style.css" type="text/css" rel="stylesheet">
+        <title>The Learning Platform</title>
+    </head>
     <body>
         <h1>Mission Statement</h1>
-            <p>This website is under development. It's primary purpose will be to allow me a workspace where I can practice multiple forms of coding. So beware of broken buttons and useless bits of information in random places.</p>
+        <p>This website is under development. Its primary purpose will be to allow me a workspace where I can practice multiple forms of coding. So beware of broken buttons and useless bits of information in random places.</p>
         <h2>Goals</h2>
-            <ol class="goals">
-                <li>Gain a fuller understanding of HTML</li>
-                <li>Get good with CSS</li>
-                <li>Learn JavaScript</li>
-                <li>Create multiple projects which can be sold</li>
-            </ol>
-        <img src=".\resources\images\StockPhoto1.jfif" class="photo1">
+        <ol class="goals">
+            <li>Gain a fuller understanding of HTML</li>
+            <li>Get good with CSS</li>
+            <li>Learn JavaScript</li>
+            <li>Create multiple projects which can be sold</li>
+        </ol>
+        <img src="./resources/images/StockPhoto1.jfif" class="photo1">
         <h3>Resources</h3>
-            <div class="container">
-                <a href="https://www.codecademy.com/" class="Links">Codecademy</a>
-                <a href="https://www.galvanize.com/" class="Links">Galvanize</a>
-                <a href="https://www.w3schools.com/html/html_css.asp" class="Links">W3Schools</a>
+        <div class="container">
+            <div style="display: flex;">
+                <a href="https://www.codecademy.com/" class="Links">
+                    <img src="./resources/images/codecademy.jpg" alt="Codecademy" style="margin-top: -0px;">
+                </a>
+                <a href="https://www.galvanize.com/" class="Links">
+                    <img src="./resources/images/galvanize.png" alt="Galvanize">
+                </a>
+                <a href="https://www.w3schools.com/html/html_css.asp" class="Links">
+                    <img src="./resources/images/w3schools.png" alt="W3Schools">
+                </a>
             </div>
+        </div>
+        <footer>
+            <p><strong>Thank you for visiting.</strong></p>
+        </footer>
     </body>
-    <footer>
-        <p><bold>Thank you for visiting.</bold></p>
+</html>
